el gitigonore no vale

--- a/HuecasAppAdmin/.gitignore
+++ b/HuecasAppAdmin/.gitignore
@@ -127,6 +127,8 @@ DocProject/Help/*.hhk
 DocProject/Help/*.hhp
 DocProject/Help/Html2
 DocProject/Help/html
+bin/Debug/
+obj/Debug/
 
 # Click-Once directory
 publish/
